MB-30559 - fix wrapping issue with nested docs in new doc editor.
Reviewed-on: http://review.couchbase.org/97466
Tested-by: Eben Haber <eben@couchbase.com>

--- a/query-ui/ui-current/query.css
+++ b/query-ui/ui-current/query.css
@@ -35,6 +35,7 @@
 }
 .doc-editor-row {
   white-space: nowrap;
+  display: inline-block;
   padding: .25rem 0;
   vertical-align: top;
 }
